add 添加运行安全措施